# python-client

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  generate.py  main.py  openapi-generator-config.yaml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_dev.txt  script.py  setup.py  test.py  test_imports.py  turbo.json  version.py
.github/workflows/: python-app.yml  test-current-version.yml  test-package.yml
.speakeasy/: gen.yaml
data/: simple_openhtf_report.json  test_report.json
docs/: api_migration.md
docs/errors/: errorconflict.md  errorinternalservererror.md  errornotfound.md  errorunauthorized.md
docs/models/: aggregationsdataseryvalidators.md  attachmentdeleteresponse.md  attachmentfinalizerequestbody.md  attachmentfinalizeresponse.md  attachmentinitializerequest.md  attachmentinitializeresponse.md  batchcreateresponse.md  batchgetcreatedbyuser.md  batchgetrequest.md  batchgetrevision.md  batchgetunit.md  batchlistcreatedbystation.md  batchlistdata.md  batchlistmeta.md  batchlistrequest.md  batchupdateresponse.md  childpart.md  childrevision.md  dataseryaggregations.md  dataseryexpectedvalue.md  dataseryvalidators.md  errorforbiddenissue.md  errorinternalservererrorissue.md  errornotfoundissue.md  lastrun.md  measurement.md  measurementsaggregationsoutcome.md  measurementsaggregationsvalidatorsoutcome.md  partcreaterequest.md  partcreateresponse.md  partcreaterevisionrequestbody.md  partdeleteresponse.md  partgetcreatedbyuser.md  partgetresponse.md  partgetrevision.md  partgetrevisioncreatedbystation.md  partgetrevisionpart.md  partgetrevisionresponse.md  partlistmeta.md  partlistsortby.md  (+97 more)
examples/: _create_run_batch_cable_test.py  _create_run_from_report_basic.py  _create_run_single_sub_unit.py  _update_unit_basic.py  create_run_basic.py  create_run_batch_cable_test.py  create_run_complete.py  create_run_from_report_basic.py  create_run_multiple_sub_units.py  create_run_single_sub_unit.py  create_run_with_attachments.py  create_run_with_duration.py  create_run_with_report_variables.py  create_run_with_steps.py  get_runs_basic.py  requirements.txt  update_unit_basic.py
examples/api/: index.py
examples/framework/: attachments.py  complete.py  numeric_limit.py  pass_fail.py  report_variables.py  string.py  string_step.py  sub_unit.py
python-speakeasy/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  package.json  pyproject.toml
python-speakeasy/.speakeasy/: gen.yaml
python-speakeasy/scripts/: generate-sdk.sh
python-speakeasy/tests/: README.md  conftest.py
python-speakeasy/tofupilot/v1/: client.py  pyproject.toml
python-speakeasy/tofupilot/v1/models/: models.py
python-speakeasy/tofupilot/v1/utils/: __init__.py
scripts/: generate-sdk.sh
src/: client.py
src/utils/: file_utils.py  logger.py
tests/: README.md  conftest.py  test_client.py  test_client_initialization.py  test_create_run.py  test_examples.py  test_file_utils.py  test_get_runs.py
tests/api/: __init__.py  test_imports_api.py  test_runs_api.py  test_streaming_api.py  test_units_api.py  test_uploads_api.py
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: README.md  __init__.py  (+3 more)
tofupilot/: __init__.py  banner.py  cli.py  client.py  constants.py  error_tracking.py  openhtf.py  operator_ui.py  plugin.py  pyproject.toml  telemetry_config.py  upload.py
tofupilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tofupilot/v2/: __init__.py  _version.py  attachments.py  basesdk.py  batches.py  client.py  client_with_error_tracking.py  github.py  gitlab.py  httpclient.py  parts.py  procedures.py  pyproject.toml  revisions.py  runs.py  sdk.py  sdkconfiguration.py  stations.py  units_sdk.py  user.py  versions.py
tofupilot/v2/_hooks/: __init__.py  example_hook.py  sdkhooks.py  types.py
tofupilot/v2/errors/: __init__.py  apierror.py  attachment_deleteop.py  attachment_initializeop.py  batch_createop.py  batch_deleteop.py  batch_getop.py  batch_listop.py  batch_updateop.py  error_bad_gateway.py  error_bad_request.py  error_conflict.py  error_forbidden.py  error_internal_server_error.py  error_not_found.py  error_unprocessable_content.py  errorbadgateway.py  errorbadrequest.py  errorconflict.py  errorforbidden.py  errorinternalservererror.py  errornotfound.py  errorpreconditionfailed.py  errorunauthorized.py  errorunprocessablecontent.py  github_getinstallationtokenop.py  no_response_error.py  part_createop.py  part_createrevisionop.py  part_deleteop.py  part_deleterevisionop.py  part_getop.py  part_getrevisionop.py  part_listop.py  part_updateop.py  part_updaterevisionop.py  procedure_createop.py  procedure_createversionop.py  procedure_deleteop.py  procedure_deleteversionop.py  (+23 more)
tofupilot/v2/models/: __init__.py  attachment_confirmop.py  attachment_deleteop.py  attachment_finalizeop.py  attachment_initializeop.py  batch_createop.py  batch_deleteop.py  batch_getop.py  batch_listop.py  batch_updateop.py  error_bad_gateway.py  error_bad_request.py  error_internal_server_error.py  errorbadgateway.py  errorbadrequest.py  errorconflict.py  errorforbidden.py  errorinternalservererror.py  errornotfound.py  errorpreconditionfailed.py  errorunauthorized.py  errorunprocessablecontent.py  github_getinstallationtokenop.py  gitlab_getinstallationtokenop.py  part_createop.py  part_createrevisionop.py  part_deleteop.py  part_deleterevisionop.py  part_getop.py  part_getrevisionop.py  part_listop.py  part_updateop.py  part_updaterevisionop.py  procedure_createop.py  procedure_createversionop.py  procedure_deleteop.py  procedure_deleteversionop.py  procedure_getop.py  procedure_getversionop.py  procedure_listop.py  (+21 more)
tofupilot/v2/types/: __init__.py  basemodel.py  models.py  responses.py
tofupilot/v2/utils/: __init__.py  annotations.py  datetimes.py  enums.py  eventstreaming.py  forms.py  headers.py  logger.py  metadata.py  queryparams.py  requestbodies.py  retries.py  security.py  serializers.py  unmarshal_json_response.py  url.py  values.py
(+681 files in other folders)
