# Build system configuration for pip-based installation
# This file configures the build backend and development tools

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["F", "I", "UP", "E", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (may require API access)",
    "unit: marks tests as unit tests (no external dependencies)",
    "create_run: tests for run creation functionality",
    "crud: tests for CRUD operations (create, read, update, delete)",
    "openhtf: tests for OpenHTF integration",
    "attachments: tests involving file attachments",
    "measurements: tests focusing on measurement data",
    "legacy: tests for legacy API features",
    "slow: marks tests as slow running",
]
