[tool.poetry]
name = "tofupilot"
version = "1.11.2"
description = "Official Python client for TofuPilot with OpenHTF integration, real-time streaming and file attachment support"
authors = ["TofuPilot Team <hello@tofupilot.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tofupilot/python-client"
repository = "https://github.com/tofupilot/python-client"
keywords = ["automatic", "hardware", "testing", "tofupilot", "openhtf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent", 
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "tofupilot"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
packaging = ">=23.0"
pytest = "*"
paho-mqtt = "^2.0.0"
certifi = "^2020.12.5"
httpx = ">=0.23.0,<0.29.0"
attrs = ">=22.2.0"
python-dateutil = "^2.8.0"

[tool.poetry.group.openhtf.dependencies]
openhtf = {version = "*", optional = true}

[tool.poetry.group.dev.dependencies]
openapi-python-client = "^0.25.0"
pytest-asyncio = "^0.21.0"
build = "*"
twine = "*"
websockets = "*"

[tool.poetry.extras]
openhtf = ["openhtf"]

[tool.poetry.plugins."pytest11"]
tofupilot = "tofupilot.plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["F", "I", "UP", "E", "W"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
]
