[project]
name = "tofupilot-v2"
version = "0.7.3"
description = "TofuPilot v2 Speakeasy-generated SDK client"
authors = [
    { name = "TofuPilot Team", email = "hello@tofupilot.com" },
    { name = "Speakeasy" }
]
readme = "../../README.md"
license = { text = "MIT" }
requires-python = ">=3.9.2"

dependencies = [
    "httpcore>=1.0.9",
    "httpx>=0.28.1", 
    "pydantic>=2.11.2",
    "posthog>=3.0.0",
]

[build-system]
requires = ["setuptools>=50.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tofupilot.v2"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
