[project]
name = "tofupilot-v1"
version = "1.11.2"
description = "TofuPilot v1 legacy client with OpenHTF integration and pytest plugin"
authors = [{ name = "TofuPilot Team", email = "hello@tofupilot.com" }]
readme = "../../README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["automatic", "hardware", "testing", "tofupilot", "openhtf"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core v1 dependencies
    "requests>=2.25.0",
    "packaging>=20.0",
    "certifi>=2023.7.22",
    # OpenHTF integration
    "openhtf",
    "paho-mqtt>=2.0.0",
    # pytest plugin
    "pytest>=6.0.0",
    # Error tracking
    "posthog>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/tofupilot/python-client"
Documentation = "https://tofupilot.com/docs"
Repository = "https://github.com/tofupilot/python-client"

[project.entry-points."pytest11"]
tofupilot = "tofupilot.pytest.plugin:TestPilotPlugin"

[build-system]
requires = ["setuptools>=50.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tofupilot.v1", "tofupilot.pytest", "tofupilot.openhtf"]